src/compiletest/qcell-01.stderr
error[E0599]: no method named `clone` found for struct `QCellOwner` in the current scope
 --> $DIR/qcell-01.rs:8:25
  |
8 |     let owner2 = owner1.clone();  // Compile fail
  |                         ^^^^^ method not found in `QCellOwner`
